...
                                <rect key="frame" x="0.0" y="400" width="375" height="267"/>
                                <subviews>
                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="8CT-L6-WiX">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="197"/>
                                        <animations/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" label="Album description"/>
                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nul
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                    </textView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6xm-Id-j8y">
                                        <rect key="frame" x="122" y="214" width="131" height="30"/>
                                        <animations/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="6xm-Id-j8y" secondAttribute="height" multiplier="131:30" id="k8i-hg-kRA"/>
                                            <constraint firstAttribute="width" constant="131" id="riJ-cG-6Hr"/>
                                        </constraints>
                                        <state key="normal" title="NEXT"/>
                                        <connections>
                                            <action selector="nextPressed:" destination="Rtc-a4-6u9" eventType="touchUpInside" id="l5l-MN-pBa"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <animations/>
...
