...
    func appLaunched()
    {
        eventHandler?.updateView()
    }
    
    func configureView() {
        navigationItem.title = "Top Albums"
        txtInfo.text = ""
    }

    
    func showNoContentMessage() {
        butNext.enabled = false
...
